[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/exploration/ui/dialogue_panel.gd" id="1"]

[node name="DialoguePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
anchor_offset_left = -200.0
anchor_offset_top = -120.0
anchor_offset_right = 200.0
anchor_offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SpeakerLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker"
visible = false

[node name="TextLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "Dialogue text goes here."
autowrap_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 6
